Fix the margin issue causing text to be cutoff

--- a/client/src/pages/languages/view/view-language.scss
+++ b/client/src/pages/languages/view/view-language.scss
@@ -383,7 +383,7 @@
 
 .language {
 	.language-header {
-		margin: 40px;
+		margin: 40px 0;
 		padding: 24px;
 
 		.language-title {
